@@ -419,4 +419,5 @@ rt/javax/net/ssl/X509ExtendedKeyManager.java
 rt/javax/net/ssl/X509KeyManager.java
 rt/javax/net/ssl/X509TrustManager.java
 rt/java/io/
+rt/sun/awt
 generated/sun/awt/X11/generator/sizer.32.orig
