@@ -618,6 +618,7 @@ ICEDTEA_COPY_DIRS = \
 	java/io \
 	java/util \
 	java/rmi \
+	sun/awt/ \
 	javax/net/ssl
 
 stamps/copy-source-files.stamp: stamps/patch.stamp
@@ -759,10 +760,10 @@ bootstrap/jdk1.7.0/jre/lib/rt-closed.jar: stamps/rt-class-files.stamp
 	if ! test -f stamps/icedtea-ecj.stamp ; \
         then \
           $(JAR) cf $@ -C lib/rt com -C lib/rt java \
-          -C lib/rt javax -C lib/rt net; \
+          -C lib/rt javax -C lib/rt sun -C lib/rt net; \
 	else \
           $(ICEDTEA_BOOT_DIR)/bin/jar cf $@ -C lib/rt com -C lib/rt java \
-          -C lib/rt javax -C lib/rt net; \
+          -C lib/rt javax -C lib/rt net -C lib/rt sun; \
 	fi
 	if test -d bootstrap/ecj/jre/lib ; \
 	then \
