@@ -1,3 +1,11 @@
+2008-03-05  Lillian Angel  <langel@redhat.com>
+
+	* .hgignore: Updated.
+	* Makefile.am: Added sun/awt to COPY_PLUGS.
+	* Makefile.in: Regenerated.
+	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
+	* generated/sun/awt/X11/generator/sizer.32.c: Regenerated.
+
 2008-03-04  Lillian Angel  <langel@redhat.com>
 
 	* rt/com/sun/script: Removed.
